@@ -12,5 +12,5 @@ Python Steemit bot for automatically following people posting with specified tag
 
 from ag.boiler.__version__ import __version__
 
-print ("Steemit Boiler %s successfully installed!" % (__version__))
+print ("Steemit Boiler %s detected" % (__version__))
 
