@@ -1,0 +1,7 @@
+#!/bin/sh
+#
+# Copyright (C) 2017 Alpha Griffin
+# @%@~LICENSE~@%@
+
+python3 -m ag.boiler $@
+
